k8s/overlays/k3d/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devices-configuration
spec:
  template:
    spec:
      containers:
        - name: devices-configuration
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 60
